grid menu for builds page

--- a/www/md_base/src/app/builds/builds.less
+++ b/www/md_base/src/app/builds/builds.less
@@ -11,10 +11,27 @@
   padding: 0px !important;
 
   .menu {
-    max-width: 300px;
+    max-width: 250px;
     width: 30%;
     border-right: 1px solid #dfdfef;
-    padding: 10px;
     background: #fff;
+
+    .grid-menu .menu-item {
+      float: left;
+      padding: 10px;
+      width: 50%;
+      height: 60px;
+      color: #333;
+      cursor: pointer;
+      text-align: center;
+      border-left: 1px solid #eee;
+      border-bottom: 1px solid #eee;
+
+      span.title {
+        margin-top: 5px;
+        display: block;
+        font-size: 12px;
+      }
+    }
   }
 }
