--- a/www/md_base/src/app/builds/builds.tpl.jade
+++ b/www/md_base/src/app/builds/builds.tpl.jade
@@ -1,4 +1,16 @@
 div.menu
-  | menu
+  div.grid-menu
+    div.menu-item
+      md-icon(md-svg-icon="wand")
+      span.title Masters
+    div.menu-item
+      md-icon(md-svg-icon="hammer")
+      span.title Slaves
+    div.menu-item
+      md-icon(md-svg-icon="clock")
+      span.title Schedulers
+    div.menu-item
+      md-icon(md-svg-icon="changes")
+      span.title Latest changes
 md-content(flex, ui-view)
   | content
