--- a/www/md_base/src/app/index.jade
+++ b/www/md_base/src/app/index.jade
@@ -6,7 +6,7 @@ html(ng-app="app", ng-controller="appController as app")
     meta(name='viewport', content='initial-scale=1, minimum-scale=1, user-scalable=no, maximum-scale=1, width=device-width')
 
     | {% raw %}
-    title(ng-bind-template="Buildbot | {{ app.title }}")
+    title(ng-bind-template="Buildbot | {{ app.view.title }}")
     | {% endraw %}
 
     link(rel='stylesheet', href='styles.css')
@@ -20,8 +20,8 @@ html(ng-app="app", ng-controller="appController as app")
             md-button.nav-button(hide-gt-sm, ng-click="app.openMenu()", aria-label="Show Menu")
               md-icon(md-svg-icon="navicon")
             b Buildbot
-            span.title(ng-bind="app.title")
-        md-content.md-padding(flex, ui-view, ng-class="app.name")
+            span.title(ng-bind="app.view.title")
+        md-content.md-padding(flex, ui-view, ng-class="app.view.classname")
           h1 Hello buildbot!
 
       script(src="scripts.js?_#{(new Date()).getTime()}")
