added builder route, add builders menu

--- a/www/md_base/src/app/builds/builds.less
+++ b/www/md_base/src/app/builds/builds.less
@@ -45,6 +45,8 @@
 
     .builders-menu {
       margin-top: 80px;
+      overflow: hidden;
+      overflow-y: auto;
 
       .menu-title {
         font-size: 14px;
@@ -52,6 +54,17 @@
         text-align: center;
       }
 
+      .builders {
+        margin-top: 10px;
+        border-top: 1px solid #eee;
+      }
+
+      .no-builder {
+        text-align: center;
+        font-size: 12px;
+        color: #aaa;
+        padding: 10px;
+      }
     }
   }
 }
