--- a/www/md_base/src/app/home/panels/recent_builds/recent_builds_panel.tpl.jade
+++ b/www/md_base/src/app/home/panels/recent_builds/recent_builds_panel.tpl.jade
@@ -1,5 +1,5 @@
 div.no-build(ng-if="recent_builds.length == 0")
-  | No completed builds yet. Go to 
+  | No completed builds yet. Go to
   a(ui-sref="builds") builds panel
   |  to trigger a build.
-build-item(ng-repeat="build in recent_builds", build="build", show-builder="recent.showBuilders")
+build-item(ng-repeat="build in recent.builds", build="build", show-builder="recent.showBuilders")
